fix feedback align items

--- a/main.css
+++ b/main.css
@@ -102,46 +102,46 @@ button {
 }
 
 .cards {
-    display: grid;
-    grid-gap: 50px;
-    grid-template-columns: 1fr 1fr 1fr;
+	display: grid;
+	grid-gap: 50px;
+	grid-template-columns: 1fr 1fr 1fr;
 }
 
 .card {
-    padding: 35px 40px 25px 40px;
-    background: #FFFFFF;
-    border: 1px solid #D9E4E6;
-    border-radius: 5px;
+	padding: 35px 40px 25px 40px;
+	background: #FFFFFF;
+	border: 1px solid #D9E4E6;
+	border-radius: 5px;
 }
 
 .card p {
-    opacity: 0.8;
-    font-size: 16px;
-    line-height: 22px;
+	opacity: 0.8;
+	font-size: 16px;
+	line-height: 22px;
 }
 
 .card__logo {
-    font-weight: 700;
-    font-size: 32px;
-    background: #eaeff9;
-    border-radius: 50%;
-    height: 100px;
-    width: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	font-weight: 700;
+	font-size: 32px;
+	background: #eaeff9;
+	border-radius: 50%;
+	height: 100px;
+	width: 100px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .card__logo.yellow {
-    color: #ffb406;
+	color: #ffb406;
 }
 
 .card__logo.red {
-    color: #ad1714;
+	color: #ad1714;
 }
 
 .card__logo.green {
-    color: #22a030;
+	color: #22a030;
 }
 
 .features__border {
@@ -171,7 +171,7 @@ button {
 
 .features__feedback-right {
 	display: flex;
-	align-items: center;
+	align-items: stretch;
 }
 
 .features__box {
@@ -405,8 +405,8 @@ footer h3 {
 	}
 	
 	.cards {
-        grid-template-columns: auto;
-    }
+		grid-template-columns: auto;
+	}
 	
 	.features__feedback {
 		flex-direction: column;
